unix/lang/tests/error/missing_until_in_for.yab
#expect#---Error in missing_until_in_for.yab, line 13:
#expect#---Error: a closing until is expected before next
#expect#   next
#expect#   ^~~~
#expect#---Error: repeat-loop starting at line 12 has seen no 'until' yet
#expect#   next
#expect#   ^~~~
#expect#---Error: Couldn't parse program
#expect#---Error: Program not executed
for a=1 to 2
  REM    The next line has no until
  repeat
next
